[css] fixed alignment of keyboard

--- a/synth.css
+++ b/synth.css
@@ -11,9 +11,9 @@
 	div.keyboard
 	{
 		/* Frame of the keyboard. */
-		width: 90%;
-		height: 80%;
-		padding: 4% 0% 4% 4%;
+		height: 90%;
+		margin: 1%;
+		padding: 5% 0% 0% 10%;
 		border-radius: 10px; /* Nice rounded corner. */
 		background-color: black; /* That's for browsers not supporting gradients. */
 
@@ -29,7 +29,7 @@
 		/* Common properties of keys. */
 		position: relative;
 		float: left;
-		margin: 0px;
+		margin: -2px;
 		padding: 0px;
 		border: solid 2px #303030;
 		border-radius: 4px;
@@ -50,7 +50,7 @@
 
 	div.white.key
 	{
-		width: 4.5%;
+		width: 6%;
 		height: 90%;
 		z-index: 1;
 		background: white;
@@ -59,9 +59,9 @@
 
 	div.black.key
 	{
-		width: 3%;
+		width: 4%;
 		height: 60%;
-		margin: 0px -2% 0px -2%;
+		margin: 0px -2.5% 0px -2.5%;
 		z-index: 2;
 		background: black;
 		color: white;
